2009-02-18 Denton Woods <doomwiz@users.sf.net>
	* configure.ac: Added descriptions of more image formats.
	* il_ftx.c (iLoadFtxInternal): Changed to load all FTX images as RGBA.

2009-02-17 Denton Woods <doomwiz@users.sf.net>
	* ilu_mipmap.c: Changed all references of Next to Mipmaps to fix bug noticed at
	  https://sourceforge.net/forum/message.php?msg_id=6443698.
	* Added support for IL_NO_GAMES in il_internal.h.

2009-02-17 Matěj Týč <bubla@users.sf.net>
	* configure.ac, m4/devil-definitions.m4 (TEST_FORMAT): Added an option
	to describe image formats.

2009-02-16 Matěj Týč <bubla@users.sf.net>
	* src-ILU/ilur: Made ilur independent on regex.h
	* autogen.sh: Simplified autotools invocation to autoreconf only
	* configure.ac: Added support for IL_NO_GAMES if users don't want
	support for game formats
	* docs/DevIL_manual.texi: Fixed errors causing trouble when making
	  info files + some minor syntax enhancements.

2009-02-16 Denton Woods <doomwiz@users.sf.net>
	* il_manip.c (ilGetAlpha): Added IL_ALPHA case.
	* il_manip.c (ilSetAlpha): Cleaned up formatting.  Added IL_ALPHA case.
	  Fixed casting issue in integer case.
	* il_texture.c: Added this file and the simple .texture loading.
	* lib/Makefile.am and src-IL/src/Makefile.am: Added il_texture.c to source line.
	* il.h: Added IL_TEXTURE define.
	* il_internal.h: Added .texture loading declarations.
	* DevIL.nb: Removed the test image from the notebook to drop it from over 9MB to 4.5KB.

2009-02-15 Denton Woods <doomwiz@users.sf.net>
	* il_blp.c (iLoadBlpInternal): Finished testing and fixed BLP2 RAW with 1-bit alpha.
	* il_dicom.c: Added this file.
	* config.h.win: Added defines for new image formats.
	* il_io.c / il_jp2.c: Added .jpx, .j2k and .j2c extensions for JPEG 2000.
	* il_io.c / il_jpeg.c: Added .jif and .jfif extensions for JPEG.
	* il_dicom.c: Added DICOM loading for uncompressed formats and little endian data.
	* lib/Makefile.am and src-IL/src/Makefile.am: Added il_dicom.c to source line.