@@ -31,7 +31,9 @@
 #include <IL/il.h>
 #include <IL/ilu.h>
 #include <IL/ilut.h>
-#include <sdl.h>
+#ifdef ILUT_USE_SDL
+	#include <sdl.h>
+#endif
 #include "resource.h"
 #include <stdlib.h>
 #include <wchar.h>
@@ -77,7 +79,7 @@ TCHAR *ExtList[] = {
 	L"pix", L"cut", L"dcx", L"gif", L"mdl", L"lif", L"jpe", L"jpg", L"jpeg", L"lif", L"bmp",
 	L"ico", L"pbm", L"pgm", L"ppm", L"png", L"bw", L"rgb", L"rgba", L"sgi", L"tga", L"tif",
 	L"tiff", L"xpm", L"psp", L"psd", L"iwi", L"exr", L"blp", L"tpl", L"wdp", L"pcx", L"dcm",
-	L"rot",
+	L"rot", L"iwi", L"ftx",
 	NULL
 };
 
